--- a/src/template/index.j2
+++ b/src/template/index.j2
@@ -13,22 +13,22 @@
 {% block body %}
     <div id="map"></div>
     <div id="tool-btn-container"><!--
-     --><a id="btn-zoom-in" href="javascript:void(0)" class="btn-tool"><div class="zoom-label">+</div></a><!--
-     --><a id="btn-zoom-out" href="javascript:void(0)" class="btn-tool"><div class="zoom-label">&minus;</div></a><!--
-     --><a id="btn-tree" href="javascript:void(0)" class="btn-tool"></a><!--
-     --><a id="btn-ward" href="javascript:void(0)" class="btn-tool"></a><!--
-     --><a id="btn-measure" href="javascript:void(0)" class="btn-tool" measure-type="line">
+     --><a id="btn-zoom-in" href="javascript:void(0)" class="btn btn-tool"><div class="zoom-label">+</div></a><!--
+     --><a id="btn-zoom-out" href="javascript:void(0)" class="btn btn-tool"><div class="zoom-label">&minus;</div></a><!--
+     --><a id="btn-tree" href="javascript:void(0)" class="btn btn-tool"></a><!--
+     --><a id="btn-ward" href="javascript:void(0)" class="btn btn-tool"></a><!--
+     --><a id="btn-measure" href="javascript:void(0)" class="btn btn-tool" measure-type="line">
             <div class="line-icon"></div>
             <div class="circle-icon"></div>
         </a>
     </div>
-    <a id="menu-left-open-btn" href="javascript:void(0)" class="btn-open">
+    <a id="menu-left-open-btn" href="javascript:void(0)" class="btn btn-open">
         <div class="gear"></div>
     </a>
-    <a id="menu-right-open-btn" href="javascript:void(0)" class="btn-open"></a>
+    <a id="menu-right-open-btn" href="javascript:void(0)" class="btn btn-open"></a>
     <div id="menu-left" class="menu-panel collapsed-horizontal">
         <div class="menu-panel-inner">
-            <a href="javascript:void(0)" id="menu-left-close-btn" class="btn-close">&times;</a>
+            <a href="javascript:void(0)" id="menu-left-close-btn" class="btn btn-close">&times;</a>
             <div class="menu-contents">
                 <div class="menu-item">
                     <input type="radio" name="mode" value="navigate" id="navigateToggle" checked />
@@ -104,9 +104,9 @@
     </div>
     <div id="menu-right" class="menu-panel collapsed-horizontal">
         <div class="menu-panel-inner">
-            <a href="javascript:void(0)" id="menu-right-close-btn" class="btn-close">&times;</a>
+            <a href="javascript:void(0)" id="menu-right-close-btn" class="btn btn-close">&times;</a>
             <input type="radio" id="menu-right-back-btn" name="right-menu" value="back" checked />
-            <label id="back-btn" class="btn-back" for="menu-right-back-btn">&#x2190;</label>
+            <label id="back-btn" class="btn btn-back" for="menu-right-back-btn">&#x2190;</label>
             <div class="back-group">
                 <div class="menu-contents">
                     <div class="menu-item">
@@ -183,7 +183,7 @@
         <div id="notification-content" class="message-content"></div>
     </div>
     <div id="info" class="slideDown">
-        <a href="javascript:void(0)" id="info-close-btn" class="btn-close">&times;</a>
+        <a href="javascript:void(0)" id="info-close-btn" class="btn btn-close">&times;</a>
         <div id="info-content" class="message-content"></div>
     </div>
     <div id="help" class="modal modal-close">
