--- a/www/app.css
+++ b/www/app.css
@@ -16,7 +16,7 @@ hr {
 select:hover {
   cursor: pointer; }
 
-.btn, .btn-close, .btn-open, .btn-back, .btn-tool {
+.btn {
   text-decoration: none;
   background-color: #111;
   color: #818181;
@@ -25,13 +25,20 @@ select:hover {
   height: 50px;
   display: block;
   text-align: center;
-  line-height: 50px; }
-  .btn:hover, .btn-close:hover, .btn-open:hover, .btn-back:hover, .btn-tool:hover {
-    -moz-transform: scale(0.95);
-    -o-transform: scale(0.95);
-    -ms-transform: scale(0.95);
-    -webkit-transform: scale(0.95);
-    transform: scale(0.95); }
+  line-height: 50px;
+  transition-duration: 0.1s; }
+  .btn.active:hover, .btn:hover {
+    -moz-transform: scale(0.9);
+    -o-transform: scale(0.9);
+    -ms-transform: scale(0.9);
+    -webkit-transform: scale(0.9);
+    transform: scale(0.9); }
+  .btn.active, .btn:active:hover {
+    -moz-transform: scale(0.8);
+    -o-transform: scale(0.8);
+    -ms-transform: scale(0.8);
+    -webkit-transform: scale(0.8);
+    transform: scale(0.8); }
 
 .button, .menu-item input.button, .menu-item input.button-half {
   color: #818181;
@@ -51,21 +58,9 @@ select:hover {
 
 .btn-open {
   z-index: 40; }
-  .btn-open:hover {
-    -moz-transform: scale(1);
-    -o-transform: scale(1);
-    -ms-transform: scale(1);
-    -webkit-transform: scale(1);
-    transform: scale(1); }
 
 .btn-close {
   z-index: 30; }
-  .btn-close:active:hover {
-    -moz-transform: scale(1);
-    -o-transform: scale(1);
-    -ms-transform: scale(1);
-    -webkit-transform: scale(1);
-    transform: scale(1); }
 
 .btn-back {
   font-size: 36px;
@@ -184,24 +179,24 @@ select:hover {
   -ms-transform: scaleX(-1) scaleY(-1);
   -webkit-transform: scaleX(-1) scaleY(-1);
   transform: scaleX(-1) scaleY(-1); }
-  #btn-measure[measure-type="line"]:hover {
+  #btn-measure[measure-type="line"].active:hover, #btn-measure[measure-type="line"]:hover {
     -moz-transform: scale(-0.9);
     -o-transform: scale(-0.9);
     -ms-transform: scale(-0.9);
     -webkit-transform: scale(-0.9);
     transform: scale(-0.9); }
   #btn-measure[measure-type="line"]:hover:active {
-    -moz-transform: scale(-1);
-    -o-transform: scale(-1);
-    -ms-transform: scale(-1);
-    -webkit-transform: scale(-1);
-    transform: scale(-1); }
+    -moz-transform: scale(-0.8);
+    -o-transform: scale(-0.8);
+    -ms-transform: scale(-0.8);
+    -webkit-transform: scale(-0.8);
+    transform: scale(-0.8); }
   #btn-measure[measure-type="line"].active {
-    -moz-transform: scale(0.9) scaleX(-1) scaleY(-1);
-    -o-transform: scale(0.9) scaleX(-1) scaleY(-1);
-    -ms-transform: scale(0.9) scaleX(-1) scaleY(-1);
-    -webkit-transform: scale(0.9) scaleX(-1) scaleY(-1);
-    transform: scale(0.9) scaleX(-1) scaleY(-1); }
+    -moz-transform: scale(0.8) scaleX(-1) scaleY(-1);
+    -o-transform: scale(0.8) scaleX(-1) scaleY(-1);
+    -ms-transform: scale(0.8) scaleX(-1) scaleY(-1);
+    -webkit-transform: scale(0.8) scaleX(-1) scaleY(-1);
+    transform: scale(0.8) scaleX(-1) scaleY(-1); }
     #btn-measure[measure-type="line"].active .line-icon {
       border-style: solid; }
 
@@ -216,7 +211,7 @@ select:hover {
   right: 9px;
   top: 15px; }
 
-#btn-measure[measure-type="circle"]:hover {
+#btn-measure[measure-type="circle"].active:hover, #btn-measure[measure-type="circle"]:hover {
   -moz-transform: scale(0.9);
   -o-transform: scale(0.9);
   -ms-transform: scale(0.9);
@@ -224,14 +219,20 @@ select:hover {
   transform: scale(0.9); }
 
 #btn-measure[measure-type="circle"]:hover:active {
-  -moz-transform: scale(1);
-  -o-transform: scale(1);
-  -ms-transform: scale(1);
-  -webkit-transform: scale(1);
-  transform: scale(1); }
+  -moz-transform: scale(0.8);
+  -o-transform: scale(0.8);
+  -ms-transform: scale(0.8);
+  -webkit-transform: scale(0.8);
+  transform: scale(0.8); }
 
-#btn-measure[measure-type="circle"].active .circle-icon {
-  border-style: solid; }
+#btn-measure[measure-type="circle"].active {
+  -moz-transform: scale(0.8);
+  -o-transform: scale(0.8);
+  -ms-transform: scale(0.8);
+  -webkit-transform: scale(0.8);
+  transform: scale(0.8); }
+  #btn-measure[measure-type="circle"].active .circle-icon {
+    border-style: solid; }
 
 .menu-panel {
   height: 100%;
@@ -258,13 +259,13 @@ select:hover {
     height: calc(100% - 50px);
     overflow-y: auto; }
 
-.btn.collapsed-horizontal, .collapsed-horizontal.btn-close, .collapsed-horizontal.btn-open, .collapsed-horizontal.btn-back, .collapsed-horizontal.btn-tool,
+.btn.collapsed-horizontal,
 .menu-panel.collapsed-horizontal {
   width: 0;
   transition: 0.2s;
   z-index: 0; }
 
-.btn.collapsed-horizontal::before, .collapsed-horizontal.btn-close::before, .collapsed-horizontal.btn-open::before, .collapsed-horizontal.btn-back::before, .collapsed-horizontal.btn-tool::before {
+.btn.collapsed-horizontal::before {
   display: none; }
 
 .menu-panel.expand-horizontal {
@@ -663,7 +664,6 @@ div#menu-right.expand-horizontal #menu-right-close-btn {
   left: 50px;
   height: 50px;
   width: 250px;
-  background-color: #888;
   z-index: 10; }
   @media only screen and (max-width: 349px), only screen and (min-width: 768px), only screen and (orientation: landscape) {
     #tool-btn-container {
@@ -679,22 +679,6 @@ div#menu-right.expand-horizontal #menu-right-close-btn {
   @media only screen and (max-width: 349px), only screen and (min-width: 768px), only screen and (orientation: landscape) {
     .btn-tool {
       display: block; } }
-
-.btn-tool:hover,
-.btn-tool:active,
-.btn-tool.active {
-  -moz-transform: scale(0.9);
-  -o-transform: scale(0.9);
-  -ms-transform: scale(0.9);
-  -webkit-transform: scale(0.9);
-  transform: scale(0.9); }
-
-.btn-tool:active:hover {
-  -moz-transform: scale(1);
-  -o-transform: scale(1);
-  -ms-transform: scale(1);
-  -webkit-transform: scale(1);
-  transform: scale(1); }
 
 #btn-tree {
   background-image: url("img/dota_cursor.png"); }
