--- a/src/scss/playback.scss
+++ b/src/scss/playback.scss
@@ -10,7 +10,7 @@
     position: relative;
     vertical-align: middle;
     border-radius: 2px;
-    background-color: white;
+    background-color: $light-bg-color;
     color: black;
     
     
