--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -81,7 +81,7 @@ select:hover {
     right: 0;
     padding: 5px;
     font-size: 14px;
-    background-color: #fff;
+    background-color: $light-bg-color;
     display: none;
     
     @media #{$not-mobile} {
