refactor: add root element parameter

--- a/src/template/index.j2
+++ b/src/template/index.j2
@@ -305,6 +305,6 @@
         <!-- @if NODE_ENV='production' !>
         <script src="bundle-<!-- @echo COMMIT_HASH !>.min.js"></script>
         <!-- @endif -->
-        <script>new InteractiveMap("<!-- @echo MAP_DATA_PATH !>", "<!-- @echo VISION_DATA_IMAGE_PATH !>", "<!-- @echo MAP_DATA_VERSION !>")</script>
+        <script>new InteractiveMap(document, "<!-- @echo MAP_DATA_PATH !>", "<!-- @echo VISION_DATA_IMAGE_PATH !>", "<!-- @echo MAP_DATA_VERSION !>")</script>
     {% endblock js %}
 {% endblock body %}
